tests/typing/pass/constructor_precond/constructor_precond_pass4.act
contract A

constructor(uint x, uint y)
iff
    x + y > 42
    inRange(uint, x + y)
creates
    uint w := x
    uint v := y

contract B

constructor(address<A> x, uint q)
iff
    q > 10
    x.w > 11
creates
    A a := x
    uint z := q


contract C

constructor(uint alpha)
iff
    alpha > 11
    inRange(uint, alpha + 42)
creates
    B b := new B(new A(alpha, 42), alpha)
