tests/typing/fail/cycle2.act
//  Call graph:
//
//      C
//     / \
//    A   B
//         \
//          D
//           \
//            C

contract A

constructor()

creates
   uint x := 0

contract B

constructor(uint x)

creates
   uint y := x
   D d := new D()

transition remote(uint z)

iff
   CALLVALUE == 0

updates
   d.x := z

contract C

constructor(uint u)

creates
   B b := new B(u)
   A a := new A()

contract D

constructor()

creates
   C c := new C(0)
   uint x := 0
